Fix obnoxious tab overflow again.

--- a/css/tabs.less
+++ b/css/tabs.less
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     max-width: 200px;
+    min-width: 0px;
     // margin-right: 3px;
     opacity: .5;
     background: @background;
